--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mdx-js/react": "^3.0.0",
     "bootstrap": "^5.3.3",
     "clsx": "^2.0.0",
+    "gitalk": "^1.8.0",
     "prism-react-renderer": "^2.3.0",
     "react": "^18.0.0",
     "react-bootstrap": "^2.10.2",
